// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A standard order 1`] = `
<li
  className="jltHGC"
>
  <span
    className="klYpfM"
  >
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj"
  >
    MOOIE 456 TEST
  </span>
  <span
    className="dcmygm"
  >
    <ul
      className="tvpac"
    >
      <li
        className="a"
      >
        1
        x 
        Name of the product
      </li>
      <li
        className="a"
      >
        2
        x 
        Another product
      </li>
    </ul>
  </span>
  <span
    className="eVaDaw"
  >
    <span>
      $100.00
    </span>
  </span>
  <span
    className="hRhztn"
  >
    <span>
      Completed
    </span>
  </span>
  <span
    className="kikiOW"
  >
    <div>
      <a
        aria-label="Download invoice"
        className="hmGMxK"
        href="http://localhost:3000/api/Orders/1/invoice?access_token="
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screen-reader-text"
        >
          Invoice
        </span>
      </a>
    </div>
  </span>
</li>
`;

exports[`An Order with a disabled invoice button 1`] = `
<li
  className="jltHGC"
>
  <span
    className="klYpfM"
  >
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj"
  >
    MOOIE 456 TEST
  </span>
  <span
    className="dcmygm"
  >
    <ul
      className="tvpac"
    >
      <li
        className="a"
      >
        1
        x 
        Name of the product
      </li>
      <li
        className="a"
      >
        2
        x 
        Another product
      </li>
    </ul>
  </span>
  <span
    className="eVaDaw"
  >
    <span>
      $100.00
    </span>
  </span>
  <span
    className="hRhztn"
  >
    <span>
      Pending
    </span>
  </span>
  <span
    className="kikiOW"
  >
    <div>
      <a
        aria-label="Download invoice"
        className="hmGMxK"
        href="http://localhost:3000/api/Orders/1/invoice?access_token="
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screen-reader-text"
        >
          Invoice
        </span>
      </a>
    </div>
  </span>
</li>
`;
